# syncthing-code

./: .gitignore  README.md  README_zh-CN.md  docker-compose.yml
.github/workflows/: docker.yaml  release.yaml
src/common/: write_git_info.py
src/stfed/: .gitignore  Dockerfile  README.md
src/stignore-generator/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_build  Dockerfile_dev  README.md  README_zh-CN.md  generate.sh  pyproject.toml  watch.sh
src/stignore-generator/src/: lib.rs  main.rs  version.rs
src/stignore-generator/src/stignore_generator/: __init__.py  generate-stignore.py
