[project]
name = "stignore-generator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "117503445", email = "t117503445@gmail.com" }
]
dependencies = [
    "gitignore-parser>=0.1.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stignore-generator"]